# Octree-suite

./: .gitignore  .gitmodules  CMakeLists.txt  Imgui.cmake  LICENSE.txt  README.md  encodingBenchmark.sh  generateChunkSizeTest.sh  generateCompressedVideos.sh  generateDataset.sh  generateInner.sh  generateTimeInner.sh  generateTimeMeasure.sh  generateUncompressedDataset.sh  generateWalkUncompressed.sh  octree_test.oct
capture/: CMakeLists.txt  README.md
capture/src/: main.cpp  main.h  octreeCapture.h  openCVCalibrator.cpp  pointcloudRenderer.cpp
capture/src/capture/: asyncPointcloudWriter.cpp  asyncPointcloudWriter.h  captureDevice.cpp  captureDevice.h  captureSettings.cpp  captureSettings.h  capturer.cpp  capturer.h  openCVCalibrator.cpp  openCVCalibrator.h
capture/src/depthCamera/: depthCamera.cpp  depthCamera.h  gpuPointTransformer.cpp  gpuPointTransformer.h  openCVCalibrator.h  types.h
capture/src/depthCamera/drivers/: realsenseDepthCamera.cpp  realsenseDepthCamera.h
capture/src/kernels/: cudaPitchRgbToRgba.cu
capture/src/render/: texturedPointcloudRenderer.cpp
capture/src/render/shaders/: captureTranslationShader.cpp  pointcloudShader.h
capture/src/shaders/: pointcloudShader.cpp
capture2ply/: CMakeLists.txt
capture2ply/src/: capture.cpp  capture.h  main.cpp
captures/: self_portrait_1.oct
lib/: CMakeLists.txt
lib/src/: cudaHelpers.h  json_helpers.cpp  json_helpers.h  lineRenderer.h  octree.h  shader.cpp  utils.cpp  utils.h  yuv.cpp  yuv.h
lib/src/dct/: dct.cpp  dct.h  quantization.cpp  quantization.h  rle.cpp  rle.h
lib/src/layeredOctree/: config.h  layeredOctree.h  layeredOctreeContainer.h  layeredOctreeContainerCuda.h  layeredOctreeContainerStatic.h  layeredOctreeContainerVector.h  treeComparison.h
lib/src/octree/: octree.cpp  octree.h  octreeLoad.cpp  octreeLoad.h  pointerOctree.cpp  pointerOctree.h
lib/src/parallel/: parallelWorker.h
lib/src/pointcloud/: pointcloud.cpp  pointcloud.h
libPointcloudCapture/: CMakeLists.txt
libPointcloudCapture/src/: asyncPointcloudWriter.cpp  asyncPointcloudWriter.h  cameraCalibrator.cpp  cameraCalibrator.h
libPointcloudCapture/src/depthCamera/: depthCamera.cpp  depthCamera.h
libPointcloudCapture/src/depthCamera/drivers/: realsenseDepthCamera.cpp  realsenseDepthCamera.h
libPointcloudCapture/src/kernels/: cudaPitchRgbToRgba.h  cudaTransformPointCloud.cu  cudaTransformPointCloud.h
libPointcloudCapture/src/render/: texturedPointcloudRenderer.cpp  texturedPointcloudRenderer.h
octreeRender/: CMakeLists.txt  README.md
octreeRender/src/: main.cpp  octreeMeshRenderer.cpp  octreeWireframeRenderer.cpp  octreeWireframeRenderer.h
octreeRender/src/cudaRenderer/: cudaRenderer.h  gpuOctree.cpp  gpuOctree.h
octreeRender/src/cudaRenderer/kernels/: octreeRenderer.cu
octreeRender/src/shaders/: cudaBlitShader.h  meshShader.cpp
octreeVideoEncoder/: CMakeLists.txt
octreeVideoEncoder/src/: config.h  main.cpp  octreeSequence.cpp  octreeSequence.h  videoEncoderRunArgs.cpp  videoEncoderRunArgs.h
octreeVideoEncoder/src/chunkedOctree/: chunkedOctreeContainer.h  layeredOctreeNode.h
octreeVideoEncoder/src/encoding/: dctContainer.cpp  dctContainer.h  dctEncoder.cpp  dctEncoder.h  deduplicator.cpp  deduplicator.h  encodingJob.cpp  encodingJob.h  encodingSequence.cpp  encodingSequence.h  octreeHashmap.cpp  octreeHashmap.h  octreeSequenceEncoder.cpp  octreeSequenceEncoder.h  octreeVideo.h
octreeVideoEncoder/src/kernels/: deduplicatorCuda.cu  deduplicatorCuda.h
octreeVideoEncoder/src/layeredOctree/: layeredOctree.h  layeredOctreeContainer.cpp  layeredOctreeContainer.h  layeredOctreeContainerCuda.h
octreeVideoEncoder/src/structures/: layeredOctreeProcessingContainer.h  octreeProcessingPayload.cpp  octreeProcessingPayload.h
playback/: CMakeLists.txt
playback/src/: main.cpp  octreeLoad.h  octreeMeshRenderer.cpp  octreeMeshRenderer.h  octreeWireframeRenderer.h
playback/src/cudaRenderer/: cudaRenderer.cpp  cudaRenderer.h  gpuOctree.h
playback/src/cudaRenderer/kernels/: octreeRenderer.cu  octreeRenderer.h
ply2octree/: CMakeLists.txt  README.md
ply2octree/src/: main.cpp  octreeGenerator.cpp  octreeGenerator.h  pointcloud.cpp  pointcloud.h
src/: calibration.cpp  calibration.h  depthCamera.cpp  depthCamera.h  main.cpp  pointcloudRenderer.cpp  pointcloudRenderer.h
src/capture/: depthCamera.cpp  depthCamera.h  main.cpp  octreeCapture.cpp  octreeCapture.h  openCVCalibrator.cpp  openCVCalibrator.h  pointcloudRenderer.h
src/capture/shaders/: captureTranslationShader.cpp  captureTranslationShader.h
src/lib/: lineRenderer.cpp  octree.cpp  octree.h  shader.h
src/playback/: main.cpp  octreeLoad.cpp  octreeLoad.h  octreeMeshRenderer.cpp  octreeMeshRenderer.h  octreeWireframeRenderer.cpp  octreeWireframeRenderer.h
src/playback/cudaRenderer/: cudaRenderer.cpp  cudaRenderer.h
src/playback/cudaRenderer/kernels/: octreeRenderer.cu  octreeRenderer.h
src/playback/shaders/: cudaBlitShader.cpp  meshShader.cpp  meshShader.h
src/shaders/: pointcloudShader.cpp
videoPlayer/: CMakeLists.txt
videoPlayer/src/: main.cpp
videoPlayer/src/gui/: gui.cpp  gui.h
videoPlayer/src/kernels/: octreeRenderer.cu  octreeRenderer.h
videoPlayer/src/players/: videoPlayer.cpp  videoPlayer.h
videoPlayer/src/players/octree/: config.h  layeredOctreeAllocator.cpp  layeredOctreeAllocator.h  octreeFrameset.cpp  octreeFrameset.h  octreeMetadata.cpp  octreeMetadata.h  octreeVideoPlayer.cpp  octreeVideoPlayer.h
videoPlayer/src/players/octree/loader/: octreeLoader.cpp  octreeLoader.h
videoPlayer/src/players/octree/render/: octreeRenderer.cpp  octreeRenderer.h
videoPlayer/src/players/ply/: plyLoader.cpp  plyLoader.h  plyMetadata.cpp  plyMetadata.h  plyRenderer.cpp  plyRenderer.h  plyVideoPlayer.cpp  plyVideoPlayer.h
videoPlayer/src/players/ply/shaders/: pointcloudShader.cpp  pointcloudShader.h
videoPlayer/src/shaders/: cudaBlitShader.cpp
videoPlayer/src/time/: clockTimeProvider.cpp  clockTimeProvider.h  recordingTimeProvider.cpp  recordingTimeProvider.h  timeProvider.h
